Add Sanity client, image URL builder, setup environment variables with dotenv, add data file for blog pages

--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -1,3 +1,5 @@
-{% extends "layouts/base.njk" %} {% block head %}
+{% extends "layouts/base.njk" %}
+
+{% block head %}
 <meta name="description" content="Home page for the Data to Dev Blog" />
 {% endblock %}
