Set up fluid typography & spacing. Finish header with responsive navbar.

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -10,6 +10,7 @@
     <title>{{ title }}</title>
   </head>
   <body>
+    {% include '../components/header.html' %}
     {{ content | safe }}
   </body>
 </html>
